[package]
name = "knife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
color-print = "0.3.5"
unescape = "0.1.0"

[dev-dependencies]
test-case = "3.2.1"

[profile.release]
strip = "symbols"
lto = true
